[project]
name = "relay-guardian"
version = "0.1.0"
description = ""
authors = [
    {name = "adarwoo",email = "44254473+adarwoo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "kivy (>=2.3.1,<3.0.0)",
    "pymodbus[serial] (>=3.9.2,<4.0.0)",
    "kivymd2 (>=2.0.1,<3.0.0)",
    "humanize (>=4.12.3,<5.0.0)",
]

[tool.poetry]
packages = [{include = "relay_guardian", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
